--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.hibernate.ddl-auto=create
 
 #
 spring.jpa.show-sql=true
+
+# JSON
+spring.jackson.serialization.fail-on-empty-beans=false
