--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 
 #
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 # JSON
 spring.jackson.serialization.fail-on-empty-beans=false
