--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,18 @@ spring.datasource.password=
 # Hibernate ddl auto (create, create-drop, validate, update, none)
 spring.jpa.hibernate.ddl-auto=create
 
-#
-spring.jpa.show-sql=true
-
 # JSON
 spring.jackson.serialization.fail-on-empty-beans=false
+
+# Log SQL
+# with spring boot
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# with log
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+# jdbc templates
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
