changes for one to many

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.show-sql=true
 
 # JSON
 spring.jackson.serialization.fail-on-empty-beans=false
+
+# spring.banner.image.location=classpath:OLAF_Logo_EN.png
+spring.banner.location=classpath:olaf.txt
