--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,9 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 # jdbc templates
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+
+logging.level.org.hibernate.tool.schema.internal.ExceptionHandlerLoggedImpl=ERROR
+
+# spring.banner.image.location=classpath:OLAF_Logo_EN.png
+spring.banner.location=classpath:olaf.txt
+spring.output.ansi.enabled=ALWAYS
