--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,4 @@ logging.level.org.hibernate.tool.schema.internal.ExceptionHandlerLoggedImpl=ERRO
 
 # spring.banner.image.location=classpath:OLAF_Logo_EN.png
 spring.banner.location=classpath:olaf.txt
+spring.output.ansi.enabled=ALWAYS
